Remove deprecated use of URL constructor